--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -16,5 +16,5 @@
     <string name="tab_search">Search</string>
     <string name="tab_home">Home</string>
     <string name="tab_profile">Profile</string>
-    <string name="secondrord_detail">Me Gusta</string>
+    <string name="secondrord_detail">Like</string>
 </resources>
